2006-09-18  Miguel de Icaza  <miguel@novell.com>

	* test/string-util.c (test_filename_from_uri): tests for new
	methods.

	* src/gstr.c (g_filename_to_uri, g_filename_from_uri): implement. 

2006-09-14  Atsushi Enomoto  <atsushi@ximian.com>

	* src/gutf8.c, test/utf8.c : EOL fix.

2006-09-04  Miguel de Icaza  <miguel@novell.com>

	* src/gmarkup.c: The leak fixing commit.
	
	* src/gmarkup.c (g_markup_parse_context_end_parse): Add missing
	method. 
	(g_markup_parse_context_free): Implement. 
	(parse_attributes): Store the value, not the attribute name
	twice. 
	Properly check the /> section.
	(g_markup_parse_context_parse): When checking for error, use the
	"error!=NULL && *error != NULL" upon return from callbacks,
	it is only then that its valid to check for *error for error
	conditions. 
	(g_markup_parse_context_parse): Add comment processing.

	Only release one element of the list.

	* test/markup.c: Incorporate the kind of code that is used in Mono
	for domain loading;  Will test the rest later. 

2006-09-01  Miguel de Icaza  <miguel@novell.com>

	* src/gmarkup.c (g_markup_parse_context_parse): Add text parsing
	support, and end-element support; not tested yet.

2006-09-01 Atsushi Enomoto <atsushi@ximian.com>

	* gutf8.c : bad allocation size. multiply sizeof gchar/gunichar2.

2006-09-01 Atsushi Enomoto <atsushi@ximian.com>

	* gutf8.c : when error is null, utf8_to_utf16_len() and
	  utf16_to_utf8_len() could return -1, so return NULL for those
	  cases in g_utf8_to_utf16() and g_utf16_to_utf8().

2006-09-01  Miguel de Icaza  <miguel@novell.com>

	* src/gmarkup.c: Builds and does minimal parsing.

	* test/markup.c: Sample test cases I have been using

2006-08-31 Atsushi Enomoto <atsushi@ximian.com>

	* src/gerror.h,
	  src/gerror.c : added g_set_error().
	* src/gutf8.c :
	  g_utf8_to_utf16() and g_utf16_to_utf8() implementation.
	* src/glib.h : added all above, and some dependent bits.
	* src/Makefile.am : added gutf8.c.
	* TODO: removed above.