@@ -193,6 +193,15 @@ test_utf8_to_utf16 ()
 	return OK;
 }
 
+RESULT
+test_convert ()
+{
+	gsize n;
+	char *s = g_convert ("\242", -1, "UTF-8", "ISO-8859-1", NULL, &n, NULL);
+
+	printf ("Result: %s %d\n", s, strlen (s));
+	return OK;
+}
 
 /*
  * test initialization
@@ -201,6 +210,7 @@ test_utf8_to_utf16 ()
 static Test utf8_tests [] = {
 	{"g_utf16_to_utf8", test_utf16_to_utf8},
 	{"g_utf8_to_utf16", test_utf8_to_utf16},
+	{"g_convert", test_convert },
 	{NULL, NULL}
 };
 
